JVPA-23 Spring Data JPA and Hibernate