@@ -1,66 +1,63 @@
 package com.javappa.start.service;
 
+
 import com.javappa.start.api.NewSportEventRequest;
 import com.javappa.start.api.SportEventResponse;
 import com.javappa.start.api.UpdateSportEventRequest;
 import com.javappa.start.domain.SportEvent;
+import com.javappa.start.repository.SportEventRepository;
 import com.javappa.start.support.ResourceNotFoundException;
-import lombok.extern.slf4j.Slf4j;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import lombok.extern.slf4j.Slf4j;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.concurrent.atomic.AtomicLong;
+import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Slf4j
 @Service
 public class SportEventService {
 
-    private AtomicLong index = new AtomicLong(3);
-    private final Map<Long, SportEvent> events = new HashMap<>();
+    private final SportEventRepository sportEventRepository;
 
-    {
-        events.put(1L, new SportEvent(1L, "Volleyball match"));
-        events.put(2L, new SportEvent(2L, "Football match"));
-        events.put(3L, new SportEvent(3L, "Boxing fight"));
-    }
     public List<SportEventResponse> getAll() {
-        return events.values().stream()
+        return sportEventRepository.findAll().stream()
                 .map(sportEvent -> new SportEventResponse(sportEvent.getId(),
                         sportEvent.getName()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Long create(NewSportEventRequest eventRequest) {
-        SportEvent event = new SportEvent(index.incrementAndGet(), eventRequest.name());
-        events.put(index.get(), event);
+        SportEvent event = new SportEvent(null, eventRequest.name());
+        SportEvent savedEvent = sportEventRepository.save(event);
         log.info("Event created");
 
-        return event.getId();
+        return savedEvent.getId();
     }
 
     public SportEventResponse getEvent(Long id) {
-        Optional<SportEvent> event = Optional.ofNullable(events.get(id));
-        return new SportEventResponse(id, event.orElseThrow().getName());
+        SportEvent event = sportEventRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("SportEvent " + id + " not found"));
+        return new SportEventResponse(id, event.getName());
     }
 
     public SportEventResponse updateEvent(Long id, UpdateSportEventRequest eventRequest) {
+        SportEvent sportEvent = sportEventRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("SportEvent " + id + " not found"));
 
-        Optional<SportEvent> event = Optional.ofNullable(events.get(id));
-        SportEvent sportEvent = event.orElseThrow();
         sportEvent.setName(eventRequest.name());
+        sportEventRepository.save(sportEvent);
         log.info("Event updated");
 
         return new SportEventResponse(id, sportEvent.getName());
     }
 
     public void deleteEvent(Long id) {
-        SportEvent event = Optional.ofNullable(events.get(id)).orElseThrow(() ->
-                new ResourceNotFoundException("SportEvent " + id + " not found"));
-        events.remove(event.getId());
+        SportEvent event = sportEventRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("SportEvent " + id + " not found"));
+
+        sportEventRepository.delete(event);
         log.info("Event removed");
     }
-
 }
